--- a/layout/index.html
+++ b/layout/index.html
@@ -1,12 +1,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple Layout</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <a class="header__logo" href="#">Header</a>
+        <nav>
+            <ul class="menu">
+                <li class="menu__item">
+                    <a class="menu__link" href="#">About us</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Pricing</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">FAQ</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="image-section">
+        <img class="image-section__img" src="" alt="">
+        <img class="image-section__img" src="" alt="">
+        <img class="image-section__img" src="" alt="">
+    </section>
+    <article class="article"> 
+        <h1 class="article__title">Lorem Ipsum</h1>
+        <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dapibus mauris eget tellus gravida auctor. Aliquam non dignissim
+        lectus, ut porta quam. Morbi congue metus vitae dapibus sodales. Sed varius mi eu neque lacinia euismod. Interdum et malesuada
+        fames ac ante ipsum primis in faucibus.</p>
+        <p class="article__text">Proin venenatis magna magna, vitae viverra massa porta vitae.</p>
+        <p class="article__text">Integer eu massa ac sem accumsan tempor sit amet ac enim. Cras mollis turpis ut dui volutpat iaculis et eget mi. Nulla in
+        urna sit amet ipsum congue fringilla et eget turpis.</p>
+    </article>
+    <footer class="footer">
+        <div class="footer__element">Footer</div>
+    </footer>
 </body>
 </html>
