--- a/layout/less/styles.less
+++ b/layout/less/styles.less
@@ -69,10 +69,12 @@
         &::before {
             content: "IMG";
             position: absolute;
-            top: 35%;
-            left: 40%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             color: @font-color-on-blue;
             font-size: 2em;
+
         }
         @media (max-width: 768px) {
             width: 60vw;
