--- a/animation/less/styles.less
+++ b/animation/less/styles.less
@@ -2,18 +2,20 @@
     width: 200px;
     height: 200px;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    position: relative;
     &__circle {
         width: 20px;
         height: 20px;
+        display: inline-block;
         background-color: rgb(230, 230, 230);
         border-radius: 100%;
         cursor: pointer;
+        position: absolute;
+        top: 50%;
         &--active {
             width: 80px;
             height: 80px;
+            border-radius: 100%;
             background-color: rgb(112, 219, 112);
             position: relative;    
             &::before {
@@ -26,6 +28,7 @@
                 position: absolute;
                 top: 40%;
                 left: 35%;
+                transition: all 0.25s;
             }
         }
          &--done {
@@ -44,3 +47,53 @@
         
     }
 }
+.one {
+    left: 0%;
+    &.step1 {
+    animation: one-step1-active 0.25s forwards ease;
+    }
+    &.step2 {
+    animation: one-step2-active 0.25s forwards ease;
+    }
+}
+.two {
+    top: 66%;
+    left: 50%;
+    &.step1 {
+    animation: two-step1 0.25s forwards ease;
+    }
+}
+.three {
+    top: 66%;
+    left: 80%;
+    &.step1 {
+    animation: three-step1 0.25s forwards ease;
+    }
+    &.step2 {
+    animation: three-step2 0.25s forwards ease;
+    }
+}
+
+@keyframes one-step1-active {
+    from {left: 0;}
+    to {left: 35%}
+}
+@keyframes one-step2-active {
+    from {left: 35%;}
+    to {left: 70%}
+}
+@keyframes two-step1 {
+    from {left: 50%;}
+    to {left: 15%}
+}
+@keyframes three-step1 {
+    from {left: 80%;}
+    to {left: 86%}
+}
+
+@keyframes three-step2 {
+    from {left: 86%;}
+    to {left: 42%}
+}
+
+
