--- a/animation/css/styles.css
+++ b/animation/css/styles.css
@@ -18,7 +18,7 @@
   width: 80px;
   height: 80px;
   border-radius: 100%;
-  background-color: #70db70;
+  background-color: #58c383;
   position: relative;
 }
 .circle-box__circle--active::before {
@@ -31,18 +31,10 @@
   position: absolute;
   top: 40%;
   left: 35%;
-  transition: all 0.25s;
 }
 .circle-box__circle--done::before {
   content: "";
-  width: 8px;
-  height: 20px;
-  border-right: 3px solid #ffffff;
-  border-bottom: 3px solid #ffffff;
-  transform: rotate(45deg);
-  position: absolute;
-  top: 33%;
-  left: 45%;
+  animation: change-next-to-tick 0.25s forwards ease;
 }
 .one {
   left: 0%;
@@ -108,5 +100,46 @@
   }
   to {
     left: 42%;
+  }
+}
+@keyframes change-next-to-tick {
+  0% {
+    width: 15px;
+    height: 15px;
+    top: 40%;
+    left: 35%;
+  }
+  14% {
+    width: 10px;
+    height: 10px;
+  }
+  28% {
+    width: 5px;
+    height: 5px;
+  }
+  50% {
+    border: 0;
+    top: 50%;
+    left: 50%;
+  }
+  56% {
+    width: 5px;
+    height: 2px;
+    border-right: 0;
+    border-left: 3px solid #ffffff;
+  }
+  70% {
+    width: 10px;
+    height: 4px;
+    border-right: 0;
+    border-left: 3px solid #ffffff;
+  }
+  100% {
+    width: 20px;
+    height: 8px;
+    top: 38%;
+    left: 38%;
+    border-right: 0;
+    border-left: 3px solid #ffffff;
   }
 }
