--- a/animation/less/styles.less
+++ b/animation/less/styles.less
@@ -16,7 +16,7 @@
             width: 80px;
             height: 80px;
             border-radius: 100%;
-            background-color: rgb(112, 219, 112);
+            background-color: rgb(88, 195, 131);
             position: relative;    
             &::before {
                 content: "";
@@ -28,23 +28,14 @@
                 position: absolute;
                 top: 40%;
                 left: 35%;
-                transition: all 0.25s;
             }
         }
-         &--done {
+        &--done {
             &::before {
                 content: "";
-                width: 8px;
-                height: 20px;
-                border-right: 3px solid rgb(255, 255, 255);
-                border-bottom: 3px solid rgb(255, 255, 255);
-                transform: rotate(45deg);
-                position: absolute;
-                top: 33%;
-                left: 45%;
+                animation: change-next-to-tick 0.25s forwards ease;
             }
         }
-        
     }
 }
 .one {
@@ -96,4 +87,44 @@
     to {left: 42%}
 }
 
-
+@keyframes change-next-to-tick {
+    0% {
+        width: 15px;
+        height: 15px;
+        top: 40%;
+        left: 35%;
+    }
+    14% {
+        width: 10px;
+        height: 10px;
+    }
+    28% {
+        width: 5px;
+        height: 5px;
+    }
+    50% {
+        border: 0;
+        top: 50%;
+        left: 50%;
+    }
+    56% {
+        width: 5px;
+        height: 2px;
+        border-right: 0;
+        border-left: 3px solid rgb(255, 255, 255);
+    }
+    70% {
+        width: 10px;
+        height: 4px;
+        border-right: 0;
+        border-left: 3px solid rgb(255, 255, 255);
+    }
+    100% {
+        width: 20px;
+        height: 8px;
+        top: 38%;
+        left: 38%;
+        border-right: 0;
+        border-left: 3px solid rgb(255, 255, 255);
+    }
+}
