--- a/animation/css/styles.css
+++ b/animation/css/styles.css
@@ -34,7 +34,7 @@
 }
 .circle-box__circle--done::before {
   content: "";
-  animation: change-next-to-tick 0.25s forwards ease;
+  animation: change-next-to-tick 0.25s 0.05s forwards ease;
 }
 .one {
   left: 0%;
