--- a/animation/less/styles.less
+++ b/animation/less/styles.less
@@ -33,7 +33,7 @@
         &--done {
             &::before {
                 content: "";
-                animation: change-next-to-tick 0.25s forwards ease;
+                animation: change-next-to-tick 0.25s 0.05s forwards ease;
             }
         }
     }
